@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow array and hash query parameters.  #7756 [Greg Spurrier]
+
 * Loading a resource preserves its prefix_options.  #7353 [Ryan Daigle]
 
 * Carry over the convenience of #create from ActiveRecord.  Closes #7340.  [Ryan Daigle]
